--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.4",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "antd": "^5.3.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
+    "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.0"
   }
 }
