--- a/package.json
+++ b/package.json
@@ -6,32 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier --write .",
+    "prettier": "prettier --write \"**/*.+(json|yml|css|md|mdx)\""
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.4",
     "@types/node": "18.15.11",
     "@types/react-dom": "18.0.11",
-    "antd": "^5.3.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-next": "^14.0.3",
+    "lucide-react": "^0.292.0",
+    "next": "^14.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-loading-skeleton": "^3.3.1",
+    "react-multi-carousel": "^2.8.4",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
-    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.2"
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0"
   }
 }
